--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li>Minsk, Belarus</li>
                 <li>+375256097278 (Telegram, Viber)</li>
                 <li>elena_keda_92@mail.ru</li>
-                <li><a href="https://github.com/ElenaKeda">Git</a></li>
+                <li><a href="https://github.com/ElenaKeda">GitHub</a></li>
             </ul>
         </div>
 
@@ -77,7 +77,7 @@
                 <li>HTML, CSS</li>
                 <li>React</li>
                 <li>Git</li>
-                <!-- <li>VSCode</li> -->
+                <li>VSCode</li>
             </ul>
         </div>
 
@@ -92,7 +92,7 @@
         <div>
             <h3>Experience</h3>
             <p>
-                I have not experience working as a developer, but this is for now...
+                I don't have any experience working as a developer, but this is for now...
             </p>
         </div>
 
@@ -111,7 +111,7 @@
         </div>
 
         <footer>
-            2021
+            Elena Keda 2021
         </footer>
     </main>
 </body>
