--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li>+375256097278 (Telegram, Viber)</li>
                 <li>elena_keda_92@mail.ru</li>
                 <li><a href="https://github.com/ElenaKeda">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/elena-keda-22982b20b/">LinkedIn</a></li>
             </ul>
         </div>
 
